--- a/game-app/package.json
+++ b/game-app/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "dom": "^0.0.3",
     "html-entities": "^2.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "*",
