--- a/game-app/package.json
+++ b/game-app/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "18.2.0",
+    "react-router-dom": "^7.6.2",
     "router": "^2.2.0"
   },
   "devDependencies": {
