--- a/game-app/vercel.json
+++ b/game-app/vercel.json
@@ -1,5 +1,7 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
-  ]
+  ],
+  "buildCommand": "vite build",
+  "outputDirectory": "dist"
 }
